add comment about javafx